--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     let totalBarangDiKeranjang = 0;
 
     var items = [
-        ['001', 'Keyboard Logitek', 60000, 'Keyboard yang mantap untuk kantoran', 'img/logitek.jpg'],
-        ['002', 'Keyboard MSI', 300000, 'Keyboard gaming MSI mekanik', 'img/msi.jpg'],
-        ['003', 'Mouse Genius', 50000, 'Mouse Genius biar lebih pinter', 'img/genius.jpg'],
-        ['004', 'Mouse Jerry', 30000, 'Mouse yang disukai kucing', 'img/jerry.jpg']
+        ['001', 'Keyboard Logitek', 60000, 'Keyboard yang bagus untuk kantoran dan ngoding', 'img/logitek.jpg'],
+        ['002', 'Keyboard MSI', 300000, 'Keyboard gaming MSI untuk bermain game', 'img/msi.jpg'],
+        ['003', 'Mouse Genius', 50000, 'Mouse Genius biar lebih jago gamingnya', 'img/genius.jpg'],
+        ['004', 'Mouse Jerry', 30000, 'Mouse yang disukai pelajar karena harga yang terjangkau', 'img/jerry.jpg']
     ]
 
     function Cari(keyword) {
@@ -61,7 +61,7 @@
                                 <h5 class="card-title" id="itemName">${item[1]}</h5>
                                 <p class="card-text" id="itemDesc">${item[3]}</p>
                                 <p class="card-text">Rp ${item[2]}</p>
-                                <a href="#" class="btn btn-primary tmbh-ke-keranjang" data-id="${item[0]}">Tambahkan ke keranjang</a>
+                                <a href="#" class="btn btn-dark tmbh-ke-keranjang" data-id="${item[0]}">Tambahkan ke keranjang</a>
                             </div>
                         </div>
                     </div>
