--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,23 +11,25 @@
     <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" 
     integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="container">
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand">Pikri Ecommerce</a>
             <form class="form-inline" id="formItem">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search"  id="keyword" aria-label="Search">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" id="keyword" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="searchItem">Search</button>
             </form>
             <button class="btn btn-primary" id="cart"><i class="fas fa-shopping-cart"></i><span id="cartItemCount">(0)</span></button>
         </nav>
         <div class="row">
-            <div class="row col-md-12 mt-2"  id="listBarang" >
-                
+            <div class="row col-md-12 mt-2" id="listBarang">
+                <!-- Barang akan muncul di sini setelah pencarian -->
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> 
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     
@@ -43,7 +46,8 @@
         ['001', 'Keyboard Logitek', 60000, 'Keyboard yang bagus untuk kantoran dan ngoding', 'img/logitek.jpg'],
         ['002', 'Keyboard MSI', 300000, 'Keyboard gaming MSI untuk bermain game', 'img/msi.jpg'],
         ['003', 'Mouse Genius', 50000, 'Mouse Genius biar lebih jago gamingnya', 'img/genius.jpg'],
-        ['004', 'Mouse Jerry', 30000, 'Mouse yang disukai pelajar karena harga yang terjangkau', 'img/jerry.jpg']
+        ['004', 'Mouse Jerry', 30000, 'Mouse yang disukai pelajar karena harga yang terjangkau', 'img/jerry.jpg'],
+        ['005', 'Monitor Gaming', 3000000, 'Monitor Gaming ROG dana pelajar', 'img/monitor.jpg']
     ]
 
     function Cari(keyword) {
@@ -54,21 +58,20 @@
                 const card = document.createElement("div");
                 card.classList.add("col-4", "mt-2");
                 card.innerHTML = `
-                    <div class ="col-4 mt-2"> 
-                        <div class="card" style="width: 18rem;">
-                            <img src="${item[4]}" class="card-img-top" height="200px" width="200px" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title" id="itemName">${item[1]}</h5>
-                                <p class="card-text" id="itemDesc">${item[3]}</p>
-                                <p class="card-text">Rp ${item[2]}</p>
-                                <a href="#" class="btn btn-dark tmbh-ke-keranjang" data-id="${item[0]}">Tambahkan ke keranjang</a>
-                            </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="${item[4]}" class="card-img-top" height="200px" alt="${item[1]}">
+                        <div class="card-body">
+                            <h5 class="card-title" id="itemName">${item[1]}</h5>
+                            <p class="card-text" id="itemDesc">${item[3]}</p>
+                            <p class="card-text">Rp ${item[2]}</p>
+                            <a href="#" class="btn btn-dark tmbh-ke-keranjang" data-id="${item[0]}">Tambahkan ke keranjang</a>
                         </div>
                     </div>
                 `;
                 listBarang.appendChild(card);
             }
         }
+
         const btnTambahKeKeranjang = document.querySelectorAll(".tmbh-ke-keranjang");
         btnTambahKeKeranjang.forEach(button => {
             button.addEventListener("click", tambahKeKeranjang);
@@ -80,16 +83,11 @@
         e.preventDefault();
         const keyword = keywordInput.value;
         Cari(keyword);
-
     });
-    document.getElementById("cart").addEventListener("click", function () {
 
+    document.getElementById("cart").addEventListener("click", function () {
         if (totalBarangDiKeranjang <= 0) {
-            Swal.fire(
-                'Info!',
-                'Keranjang sudah kosong!',
-                'info'
-            )
+            Swal.fire('Info!', 'Keranjang sudah kosong!', 'info');
         } else if (totalBarangDiKeranjang > 0 || totalBarangDiKeranjang === `9+`) {
             Swal.fire({
                 title: 'Konfirmasi',
@@ -102,11 +100,7 @@
                 cancelButtonText: 'Batal!'
             }).then((result) => {
                 if (result.isConfirmed) {
-                    Swal.fire(
-                        'Berhasil!',
-                        'Keranjang berhasil dikosongkan!',
-                        'success'
-                    )
+                    Swal.fire('Berhasil!', 'Keranjang berhasil dikosongkan!', 'success');
                     totalBarangDiKeranjang = 0;
                     document.getElementById("cartItemCount").textContent = `(0)`;
                 }
