--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         ['002', 'Keyboard MSI', 300000, 'Keyboard gaming MSI untuk bermain game', 'img/msi.jpg'],
         ['003', 'Mouse Genius', 50000, 'Mouse Genius biar lebih jago gamingnya', 'img/genius.jpg'],
         ['004', 'Mouse Jerry', 30000, 'Mouse yang disukai pelajar karena harga yang terjangkau', 'img/jerry.jpg'],
-        ['005', 'Monitor Gaming', 3000000, 'Monitor Gaming ROG dana pelajar', 'img/monitor.jpg']
+        ['005', 'Monitor Gaming', 3000000, 'Monitor Gaming ROG dana pelajar', 'img/monitor.jpg'],
+        ['006', 'Kursi Gaming', 1000000, 'Kursi Gaming  empuk dan nyaman dana pelajar', 'img/kursigaming.jpg'],
+        ['007', 'PC Gaming', 50000000, 'PC Gaming ROG Strix GeForce RTX4090 White dana pelajar', 'img/pcgaming.jpg']
     ]
 
     function Cari(keyword) {
