--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand">Pikri Ecommerce</a>
+            <a class="navbar-brand">Mas Pikri Ecommerce</a>
             <form class="form-inline" id="formItem">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" id="keyword" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="searchItem">Search</button>
@@ -51,7 +51,6 @@
         ['006', 'Kursi Gaming', 1000000, 'Kursi Gaming  empuk dan nyaman dana pelajar', 'img/kursigaming.jpg'],
         ['007', 'PC Gaming', 50000000, 'PC Gaming ROG Strix GeForce RTX4090 White dana pelajar', 'img/pcgaming.jpg']
     ]
-
     function Cari(keyword) {
         listBarang.innerHTML = "";
         for (let i = 0; i < items.length; i++) {
