--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" id="keyword" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="searchItem">Search</button>
             </form>
-            <button class="btn btn-primary" id="cart"><i class="fas fa-shopping-cart"></i><span id="cartItemCount">(0)</span></button>
+            <button class="btn btn-dark" id="cart"><i class="fas fa-shopping-cart"></i><span id="cartItemCount">(0)</span></button>
         </nav>
         <div class="row">
             <div class="row col-md-12 mt-2" id="listBarang">
