--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
             ['006', 'Kursi Gaming', 1000000, 'Kursi Gaming  empuk dan nyaman dana pelajar', 'img/kursigaming.jpg'],
             ['007', 'PC Gaming', 50000000, 'PC Gaming ROG Strix GeForce RTX4090 White dana pelajar', 'img/pcgaming.jpg'],
             ['008', 'Headset Gaming', 500000, 'Headset Gaming RGB stereo bass surround dana pelajar', 'img/headsetgaming.jpg'],
-            ['009', 'Webcam Gaming', 350000, 'Webcam Gaming HD 1080p 60FPS USB dana pelajar', 'img/webcamgaming.jpg']
+            ['009', 'Webcam Gaming', 350000, 'Webcam Gaming HD 1080p 60FPS USB dana pelajar', 'img/webcamgaming.jpg'],
+            ['010', 'Microphone PC', 280000, 'Microphone PC USb dana pelajar', 'img/microphonegaming.jpg'],
+            ['011', 'Meja Gaming', 400000, 'Meja Gaming RGB REXUS DIRA RGB', 'img/mejagaming.jpg'],
+            ['012', 'Laptop LOQ Gaming', 19000000, 'LENOVO LOQ gaming GEN CORE i7/Ryzen 7 7840HS & RTX4060', 'img/laptoploq.jpg']
         ]
         function Cari(keyword) {
             listBarang.innerHTML = "";
